--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     }
   },
   "devDependencies": {
+    "codecov": "^3.2.0",
     "cz-conventional-changelog": "^2.1.0",
     "husky": "^1.3.1",
     "lerna": "^3.13.1",
