--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,11 +1,11 @@
 resources:
   containers:
     - container: node10
-      image: 10.15.3-alpine
+      image: node:10.15.3-alpine
     - container: node11
-      image: 11.12.0-alpine
+      image: node:11.12.0-alpine
     - container: python3
-      image: 3.7.2-alpine
+      image: python:3.7.2-alpine
 jobs:
   - job: root
     strategy:
