--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,11 +1,11 @@
 resources:
   containers:
     - container: node10
-      image: node:10.15.3-alpine
+      image: node:10.15.3
     - container: node11
-      image: node:11.12.0-alpine
+      image: node:11.12.0
     - container: python3
-      image: python:3.7.2-alpine
+      image: python:3.7.2
 jobs:
   - job: root
     strategy:
