--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,8 +32,9 @@ jobs:
     steps:
       - checkout: self
       - script: curl --location --show-error --silent https://raw.githubusercontent.com/sdispater/poetry/master/get-poetry.py | python
-      - script: yarn --no-progress install
       - script: poetry install
+      - script: curl --location --output - https://yarnpkg.com/install.sh | bash
+      - script: yarn --no-progress install
         workingDirectory: packages/ai
       - script: yarn --silent lint-misc
         workingDirectory: packages/ai
