--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,9 +31,10 @@ jobs:
     container: $[variables['container']]
     steps:
       - checkout: self
-      - script: curl --location --show-error --silent https://raw.githubusercontent.com/sdispater/poetry/master/get-poetry.py | python
-      - script: source $HOME/.poetry/env
-      - script: poetry install
+      - script: |
+          curl --location --show-error --silent https://raw.githubusercontent.com/sdispater/poetry/master/get-poetry.py | python
+          source $HOME/.poetry/env
+          poetry install
       - script: curl --location --output - https://yarnpkg.com/install.sh | bash
       - script: yarn --no-progress install
         workingDirectory: packages/ai
