--- a/packages/ai/pyproject.toml
+++ b/packages/ai/pyproject.toml
@@ -31,4 +31,5 @@ python = "^3.7.2"
 black = "^19.3b0"
 flake8 = "^3.7.7"
 flake8-black = "^0.0.4"
+flake8-formatter-junit-xml = "^0.0.6"
 pytest = "^4.3.1"
