--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,9 +1,9 @@
 resources:
   containers:
     - container: node10
-      image: node:10.15.3
+      image: node:10.15.3-slim
     - container: node11
-      image: node:11.12.0
+      image: node:11.12.0-slim
     - container: python3
       image: ajtorres9/marvin-python:3.7.2
 jobs:
