--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,7 @@ variables:
   pythonVersion: 3.7.0
 jobs:
   - job: root
-    displayName: Root
+    displayName: Root on Linux
     pool:
       vmImage: ubuntu-16.04
     steps:
@@ -15,7 +15,7 @@ jobs:
       - script: yarn --silent prettylint --ignore-path .gitignore '**/*.{json,md,yml}' '!packages/**'
         displayName: Run static analysis
   - job: ai
-    displayName: AI
+    displayName: AI on Linux
     pool:
       vmImage: ubuntu-16.04
     steps:
@@ -31,6 +31,7 @@ jobs:
           pwd
           ls -ahl
         displayName: Where am I
+        workingDirectory: packages/ai
       # - script: |
       #     pip install --upgrade pip
       #     pip install poetry==0.12.11
