--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,7 @@
 variables:
   nodeVersion: 10.15.3
-  pythonVersion: 3.7.0
 jobs:
-  - job: root
+  - job: root_linux
     displayName: Root on Linux
     pool:
       vmImage: ubuntu-16.04
@@ -14,10 +13,13 @@ jobs:
       - template: build/azure-pipelines/install-node-dependencies.yml
       - script: yarn --silent prettylint --ignore-path .gitignore '**/*.{json,md,yml}' '!packages/**'
         displayName: Run static analysis
-  - job: ai
+  - job: ai_linux
     displayName: AI on Linux
     pool:
       vmImage: ubuntu-16.04
+    variables:
+      poetryVersion: 0.12.11
+      pythonVersion: 3.7.0
     steps:
       - checkout: self
       - template: build/azure-pipelines/install-node.yml
@@ -28,16 +30,11 @@ jobs:
           version: $(pythonVersion)
       - template: build/azure-pipelines/install-node-dependencies.yml
       - script: |
-          pwd
-          ls -ahl
-        displayName: Where am I
+          pip install --upgrade pip
+          pip install poetry==$(poetryVersion)
+          mkdir --parents reports/junit
+        displayName: Setup
         workingDirectory: packages/ai
-      # - script: |
-      #     pip install --upgrade pip
-      #     pip install poetry==0.12.11
-      #     mkdir --parents reports/junit
-      #   displayName: Setup
-      #   workingDirectory: packages/ai
       # - script: poetry install
       #   displayName: Install Python dependencies
       # - script: |
