--- a/packages/ai/pyproject.toml
+++ b/packages/ai/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["poetry==0.12.11"]
+build-backend = "poetry.masonry.api"
+
 [tool.black]
 line-length = 80
 
@@ -21,10 +25,11 @@ authors = [
 repository = "https://github.com/ajtorres9/marvin/tree/master/packages/ai"
 
 [tool.poetry.dependencies]
-python = "^3.7.2"
+python = "^3.7.0"
 
 [tool.poetry.dev-dependencies]
 black = "^19.3b0"
 flake8 = "^3.7.7"
 flake8-black = "^0.0.4"
+flake8-formatter-junit-xml = "^0.0.6"
 pytest = "^4.3.1"
