--- a/packages/ai/.coveragerc
+++ b/packages/ai/.coveragerc
@@ -3,5 +3,8 @@ fail_under = 100
 precision = 2
 show_missing = true
 
+[html]
+directory = coverage/ai/htmlcov
+
 [xml]
 output = coverage/ai/coverage.xml
