--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,9 +48,10 @@ jobs:
       - script: |
           yarn --silent lint-files
           yarn --silent lint-scripts --format junit-xml --output-file $(reportsDirectory)/lint-scripts.xml
+          yarn --silent lint-types --junit-xml $(reportsDirectory)/lint-types.xml
         displayName: Run static analysis
         workingDirectory: $(workingDirectory)
-      - script: yarn --silent test-units --cov ai --cov-branch --cov-report html --cov-report xml --junitxml $(reportsDirectory)/test-units.xml
+      - script: yarn --silent test-units --cov ai --cov-branch --cov-report html --cov-report xml --doctest-modules --junit-xml $(reportsDirectory)/test-units.xml
         displayName: Run tests
         workingDirectory: $(workingDirectory)
       - script: yarn --silent codecov --flags=ai --token=$(codecovToken)
