--- a/codecov.yml
+++ b/codecov.yml
@@ -1,11 +1,16 @@
 coverage:
   status:
     project:
-      default: off
+      default: false
       ai:
-        target: 100%
-        flags: ai
+        target: 100.0
+        flags:
+          - ai
+        paths:
+          - ^packages/ai/.*
+comment:
+  require_changes: true
 flags:
   ai:
     paths:
-      - packages/ai
+      - ^packages/ai/.*
