--- a/packages/ai/pyproject.toml
+++ b/packages/ai/pyproject.toml
@@ -25,12 +25,18 @@ authors = [
 repository = "https://github.com/ajtorres9/marvin/tree/master/packages/ai"
 
 [tool.poetry.dependencies]
-python = "^3.7.0"
+python = "^3.7.2"
 
 [tool.poetry.dev-dependencies]
 black = "^19.3b0"
 flake8 = "^3.7.7"
 flake8-black = "^0.0.4"
+flake8-bugbear = "^19.3.0"
+flake8-docstrings = "^1.3.0"
 flake8-formatter-junit-xml = "^0.0.6"
+flake8-import-order = "^0.18.1"
+flake8-rst-docstrings = "^0.0.8"
+mypy = "^0.700.0"
+pep8-naming = "^0.8.2"
 pytest = "^4.4.0"
 pytest-cov = "^2.6.1"
