--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "lint": "yarn lint-files && lerna run --stream lint",
-    "lint-files": "prettylint --ignore-path .gitignore **/*.{json,md,yml} !packages/**",
+    "lint-files": "prettylint --ignore-path .gitignore '**/*.{json,md,yml}' '!packages/**'",
     "test": "lerna run --stream test"
   },
   "config": {
@@ -40,8 +40,8 @@
     "prettylint": "^1.0.0"
   },
   "engines": {
-    "node": ">=10.15.3",
-    "yarn": ">=1.13.0"
+    "node": ">=10.16.0",
+    "yarn": ">=1.15.2"
   },
   "private": true,
   "workspaces": {
