--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -21,15 +21,16 @@
     "directory": "packages/ai"
   },
   "scripts": {
-    "lint": "yarn lint-files && yarn lint-scripts",
+    "lint": "yarn lint-files && yarn lint-scripts && yarn lint-types",
     "lint-files": "prettylint --ignore-path .gitignore '**/*.{json,md,toml}'",
-    "lint-scripts": "poetry run flake8",
+    "lint-scripts": "poetry run flake8 **/*.py",
+    "lint-types": "poetry run mypy **/*.py",
     "test": "yarn test-units",
     "test-units": "poetry run pytest tests"
   },
   "engines": {
-    "node": ">=10.15.3",
-    "yarn": ">=1.13.0"
+    "node": ">=10.16.0",
+    "yarn": ">=1.15.2"
   },
   "private": true,
   "lint-staged": {
@@ -39,7 +40,9 @@
         "git add"
       ],
       "*.py": [
+        "poetry run black",
         "poetry run flake8",
+        "poetry run mypy",
         "git add"
       ]
     }
