--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -17,7 +17,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ajtorres9/marvin",
+    "url": "git+https://github.com/ajtorres9/marvin.git",
     "directory": "packages/ai"
   },
   "scripts": {
@@ -34,17 +34,15 @@
   },
   "private": true,
   "lint-staged": {
-    "linters": {
-      "*.{json,md,toml}": [
-        "prettylint --fix",
-        "git add"
-      ],
-      "*.py": [
-        "poetry run black",
-        "poetry run flake8",
-        "poetry run mypy",
-        "git add"
-      ]
-    }
+    "*.{json,md,toml}": [
+      "prettylint --fix",
+      "git add"
+    ],
+    "*.py": [
+      "poetry run black",
+      "poetry run flake8",
+      "poetry run mypy",
+      "git add"
+    ]
   }
 }
